買い物ページを追加／費用ページに残高繰り越しを追加

--- a/data/contribution-settings.json
+++ b/data/contribution-settings.json
@@ -1,4 +1,7 @@
-{
-  "monthlyAmountPerPerson": 15000,
-  "memberCount": 4
-}
+[
+  {
+    "effectiveMonth": "2000-01",
+    "monthlyAmountPerPerson": 15000,
+    "memberCount": 4
+  }
+]
